--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
 <body>
   <% if (locals.user) {%>
     <h1>WELCOME BACK <%= user.first_name %></h1>
+    <p>Is Member: <%= user.is_member %></p>
+    <p>Is Admin: <%= user.is_admin %></p>
     <a href="/log-out">LOG OUT</a>
   <% } else { %>
     <h1>please log in</h1>
