--- a/views/log-in-form.ejs
+++ b/views/log-in-form.ejs
@@ -1,8 +1,20 @@
-<h1>please log in</h1>
-<form action="/log-in" method="POST">
-  <label for="email">Email</label>
-  <input id="email" name="email" placeholder="email" type="email" required/>
-  <label for="password">Password</label>
-  <input id="password" name="password" type="password" required/>
-  <button type="submit">Log In</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Log In</title>
+</head>
+
+<body>
+    <h1>please log in</h1>
+    <form action="/log-in" method="POST">
+        <label for="email">Email</label>
+        <input id="email" name="email" placeholder="email" type="email" required />
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password" required />
+        <button type="submit">Log In</button>
+    </form>
+</body>
+
+</html>
