added message partials with new queries

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,6 @@
     <p>Is Member: <%= user.is_member %></p>
     <p>Is Admin: <%= user.is_admin %></p>
     <a href="/log-out">LOG OUT</a>
+    <%- include('partials/display-messages.ejs') %>
 </body>
 </html>
