feature to edit message

--- a/views/partials/display-messages.ejs
+++ b/views/partials/display-messages.ejs
@@ -12,11 +12,11 @@
                 <small>Sent on: <%= message.timestamp.toLocaleString() %></small>
 
                 <% if (currentUser && (currentUser.id===message.user_id || currentUser.is_admin)) { %>
-                    <form action="/messages/<%= message.id %>/delete" method="POST" style="display:inline;">
+                    <form action="/delete/<%= message.id %>" method="POST" style="display:inline;">
                         <button type="submit">Delete</button>
                     </form>
 
-                    <form action="/messages/<%= message.id %>/edit" method="GET" style="display:inline;">
+                    <form action="/edit/<%= message.id %>" method="GET" style="display:inline;">
                         <button type="submit">Edit</button>
                     </form>
                     <% } %>
