--- a/views/edit-form.ejs
+++ b/views/edit-form.ejs
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Send a Message</title>
+    <title>Edit Message</title>
 </head>
 
 <body>
-    <h1>Send a Message</h1>
-    <form action="/new-message" method="POST">
+    <h1>Edit Message</h1>
+    <form action="/edit/<%= message.id %>" method="POST">
         <div>
             <label for="title">Title:</label><br />
-            <input type="text" id="title" name="title" required>
+            <input type="text" id="title" name="title" value="<%= message.title %>" required>
             <span style="color: red;" <%= errors?.find(e => e.path === 'title') ? '' : 'hidden' %>>
                 <%= errors?.find(e => e.path === 'title')?.msg %>
             </span>
@@ -19,15 +19,14 @@
 
         <div>
             <label for="message">Message:</label><br />
-            <textarea id="message" name="message" rows="5" cols="30" required></textarea>
+            <textarea id="message" name="message" rows="5" cols="30" required><%= message.body %></textarea>
             <span style="color: red;" <%= errors?.find(e => e.path === 'message') ? '' : 'hidden' %>>
                 <%= errors?.find(e => e.path === 'message')?.msg %>
             </span>
         </div>
 
-        <button type="submit">Send</button>
+        <button type="submit">Update</button>
     </form>
 </body>
 
 </html>
- 
